Removed the commited code

--- a/views/Storypage.erb
+++ b/views/Storypage.erb
@@ -1,1 +1,13 @@
 <h1>Fill out your RadLib!</h1>
+<form action = "" enctype = 'multipart/form-data' method = 'POST'>
+    <input type = 'text' title = 'Noun' name='noun' placeholder = "Noun"> 
+    <br>
+    <br>
+     <input type = 'text' name='verb' placeholder = "Verb">
+    <br>
+    <br>
+     <input type = 'text' name = 'adjective' placeholder = 'Adjective'>
+    <br>
+    <br>
+    <input type = 'submit' name = 'submitButton' value = 'Upload!')> 
+    </form>
