Added gross ass navigation

--- a/views/Storypage.erb
+++ b/views/Storypage.erb
@@ -1,4 +1,9 @@
 <h1>Fill out your RadLib!</h1>
+<ul>
+    <li><a href="/">Home Page</li>
+    <li><a href="/Uploadpage">Upload a RadLib</li>
+</ul>
+
 <form action = "" enctype = 'multipart/form-data' method = 'POST'>
     <input type = 'text' title = 'Noun' name='noun' placeholder = "Noun"> 
     <br>
