--- a/views/Uploadpage.erb
+++ b/views/Uploadpage.erb
@@ -1,13 +1,11 @@
-<DOCTYPE HTML>
-<HTML>
-<head></head>
-<body>
 <h1>Upload your RadLib here!</h1>
+<ul>
+    <li><a href="/">Home Page</li>
+    <li><a href="/Storypage">View a RadLib</li>
+</ul>
+
 <form action = "/upload" enctype = 'multipart/form-data' method = 'POST'>
     <input type = 'file' name='myfile'>
     <br>
     <input type = 'submit' value = 'Upload!')> 
-    </form>
-<p></p>
-</body>
-</HTML>
+</form>
