--- a/views/Mainpage.erb
+++ b/views/Mainpage.erb
@@ -1,1 +1,6 @@
 <h1>Welcome to RadLibs!</h1>
+
+<ul>
+    <li><a href="/Uploadpage">Upload a RadLib</li>
+    <li><a href="/Storypage">View a RadLib</li>
+</ul>
