--- a/views/Storypage.erb
+++ b/views/Storypage.erb
@@ -1,3 +1,5 @@
+<link href='/style.css' rel='stylesheet' type="text/css"/>
+
 <h1>Fill out your RadLib!</h1>
 <ul>
     <li><a href="/">Home Page</li>
