--- a/views/Uploadpage.erb
+++ b/views/Uploadpage.erb
@@ -1,3 +1,5 @@
+<link href='/style.css' rel='stylesheet' type="text/css"/>
+
 <h1>Upload your RadLib here!</h1>
 <ul>
     <li><a href="/">Home Page</li>
