More styling stuff

--- a/public/style.css
+++ b/public/style.css
@@ -2,3 +2,39 @@ h1 {
     margin-top: 3%;
     text-align: center;
 }
+
+ul {
+    list-style-type: none;
+    margin-top: 30px;
+    padding: 0;
+    overflow: hidden;
+    background-color: white;
+    text-align: center;
+    border-style: outset;
+    position: sticky;
+    top: 0;
+}
+
+li {
+    display: inline-block;
+}
+
+li a {
+    display: block;
+    color: black;
+    padding: 12px;
+    text-align: center;
+    text-decoration: none;
+}
+
+/* li a.hover {
+    background-color: coral;
+    color: white;
+    border: black;
+} */
+
+#logo {
+    width: 100px;
+    margin-top: -25px;
+    float: left;
+}
