--- a/views/Mainpage.erb
+++ b/views/Mainpage.erb
@@ -1,9 +1,10 @@
 <link href='/style.css' rel='stylesheet' type="text/css"/>
+
 <h1>Welcome to RadLibs!</h1>
 
 <ul>
-    <li><a href="/Uploadpage">Upload a RadLib</li>
-    <li><a href="/Storypage">View a RadLib</li>
+    <li><a href="/Uploadpage">Upload a RadLib</a></li>
+    <li><a href="/Storypage">View a RadLib</a></li>
 </ul>
 
 <%@folder = Dir.entries('uploads')%>
