--- a/views/Uploadpage.erb
+++ b/views/Uploadpage.erb
@@ -2,8 +2,8 @@
 
 <h1>Upload your RadLib here!</h1>
 <ul>
-    <li><a href="/">Home Page</li>
-    <li><a href="/Storypage">View a RadLib</li>
+    <li><a href="/">Home Page</a></li>
+    <li><a href="/Storypage">View a RadLib</a></li>
 </ul>
 
 <form action = "/upload" enctype = 'multipart/form-data' method = 'POST'>
